# Killer-Pool-PWA

./: .releaserc.json  README.md
.github/workflows/: deploy.yml
api/: Cargo.toml  KillerPool.sln  Rocket.toml  api.dockerfile  docker-compose.yml
api/KillerPoolApi/: KillerPoolApi.csproj  Program.cs  appsettings.Development.json  appsettings.json
api/KillerPoolApi/Configuration/: ApiConfig.cs  DatabaseConfig.cs  PushConfig.cs
api/KillerPoolApi/Controller/: GameController.cs
api/KillerPoolApi/Database/: DataContext.cs  DataContextFactory.cs
api/KillerPoolApi/Database/Models/: Game.cs  Participation.cs  Player.cs
api/KillerPoolApi/Migrations/: 20230227065216_InitialDb.Designer.cs  20230227065216_InitialDb.cs  DataContextModelSnapshot.cs
api/KillerPoolApi/Models/: AdvanceGameData.cs  CreateNewGameData.cs  PlayerData.cs  StartGameData.cs
api/KillerPoolApi/Properties/: launchSettings.json
api/infrastructure/: .terraform.lock.hcl  cloud-run.tf  database.tf  main.tf  variables.tf
api/migrations/: 20230228012555_initial-db.down.sql  20230228012555_initial-db.up.sql  20230228074759_web-push.down.sql  20230228074759_web-push.up.sql
api/src/: games.rs  main.rs  players.rs
app/: package-lock.json  package.json
app/components/: button.js  formInput.js  heading.js  input.js  link.js  loader.js  nav.js
app/pages/: [gameId].js  _app.js  _document.js  index.js  new.js
app/public/: .gitignore  manifest.json
app/services/: api.js  helpers.js  hooks.js  localstorage.js
app/worker/: index.js
