[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.0"
log = "0.4.17"
names = { version = "0.14.0", default-features = false }
rand = "0.8.5"
rocket = { git = "https://github.com/SergioBenitez/Rocket.git", branch = "master", features = ["uuid", "json"] }
rocket_db_pools = { git = "https://github.com/SergioBenitez/Rocket.git", branch = "master", features = ["sqlx_postgres"] }
serde = { version = "1.0.152", features = ["derive"] }
sqlx = { version = "0.6.2", default-features = false, features = ["runtime-tokio-rustls", "macros", "migrate", "uuid"] }
web-push = "0.9.3"
